fix overflow bug, by setting parent div height

--- a/mern-project/src/component/Home/Home.scss
+++ b/mern-project/src/component/Home/Home.scss
@@ -23,6 +23,7 @@
   }
 
   .site-layout {
+    height: 100vh;
     .header {
       background: #ffff;
     }
